<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zombi.com.ireiscour.Vue.Choix">

    <TextView
        android:text="FORMATION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/radioGroupF">

    <RadioButton
        android:text="ES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ASS"
        android:layout_below="@+id/ES"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <RadioButton
        android:text="AES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AES"
        android:layout_below="@+id/ASS"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <RadioButton
        android:text="ME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ME"
        android:layout_below="@+id/AES"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
        <RadioButton
            android:text="ASS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ES"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
        <RadioButton
            android:text="EJE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EJE"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:id="@+id/radioGroupP" >

    <RadioButton
        android:text="@string/anneeTROIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/checkBox2" />

    <RadioButton
        android:text="@string/anneeDEUX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/checkBox3" />

    <RadioButton
        android:text="@string/anneeUNE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:id="@+id/checkBox4" />

    </RadioGroup>

    <TextView
        android:text="PROMOTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/radioGroupF"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:text="LIEU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLieu"
        android:layout_below="@+id/radioGroupP"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroupL"
        android:layout_below="@+id/textViewLieu"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:text="@string/BeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/checkBoxbeb" />

        <RadioButton
            android:text="@string/Ancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/checkBoxancy" />

        <RadioButton
            android:text="@string/LR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:id="@+id/checkBoxlr" />
        <RadioButton
            android:text="@string/Firm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:id="@+id/checkBoxfirm" />

    </RadioGroup>

    <TextView
        android:text="Ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/OK"
        android:layout_toRightOf="@+id/OK"
        android:layout_toEndOf="@+id/OK"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4" />

    <Button
        android:text="Valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OK"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Mon Planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/planing"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/radioGroupL"
        android:layout_toEndOf="@+id/radioGroupL" />
    <![CDATA[


    />


]]>
</RelativeLayout>
